codegen/tests/ui/next/missing-endpoint-attribute.rs
shuttle_codegen::app! {
    async fn hello() -> &'static str {
        "Hello, World!"
    }

    async fn goodbye() -> &'static str {
        "Goodbye, World!"
    }
}
